# DPI-Based-Calculator

./: CMakeLists.txt  README.md  calculator.v  tb_top.v
Calculator-Wrapper/: CMakeLists.txt  calculator.c  calculator.h  calculator_wrapper.c
